manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
      - name: flask-app
        image: 881027529242.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /health
            port: 5000

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
